# FreshTrackAIModule

./: .dockerignore  .gitignore  API_Documentation.md  Dockerfile  Dockerfile.api  Dockerfile.cpu  Dockerfile.enhanced  Dockerfile.gpu  Dockerfile.llm  Dockerfile.simple  LICENSE  LLM_ENHANCEMENT_ANALYSIS.md  README.md  docker-compose.yml  pyproject.toml  requirements-llm.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
app/: api_main.py  enhanced_main.py  llm_main.py  main.py  simple_main.py
app/api/v1/: routes.py
app/core/: config.py  logging.py
app/data/: canonical_items.json  enhanced_food_database.json  foodkeeper.json
app/models/: schemas.py
app/services/: embedding_service.py  llm_ocr_service.py  matching_service.py  ocr_service.py  shelf_life_service.py
app/utils/: image_preprocessing.py  text_parsing.py
scripts/: build_canonical_index.py  download_foodkeeper.py  parse_wyoming_pdf.py
tests/: conftest.py  sample_receipt_generator.py  test_api.py  test_llm_service.py  test_matching.py  test_ocr.py
